@startuml
' https://plantuml.com/class-diagram

' ==== Styling ====
skinparam classFontName "Helvetica Neue"
skinparam classBorderColor #CCCCCC
skinparam classBackgroundColor #FFFFFF
skinparam classHeaderBackgroundColor #546E7A
skinparam classHeaderFontColor #ECEFF1
skinparam classFontSize 16
skinparam classRoundCorner 20
skinparam shadowing true
skinparam shadowColor #777777

skinparam arrowColor black
skinparam arrowThickness 1.2

' ==== Title ====
title Predictive Maintenance System UML

' ==== Classes ====
class Machine {
  id : INT <<PK>>
  name: VARCHAR
  installation_date : DATE
  expected_lifetime_hours : FLOAT
}

class SensorData {
  id : INT <<PK>>
  recorded_at: DATETIME
  vibration_x : FLOAT
  vibration_y : FLOAT
  speed_set : FLOAT
  load_value : FLOAT
}

class MaintenanceAction {
  id : INT <<PK>>
  action_date : DATETIME
  action_description : VARCHAR
  cost : FLOAT
  is_preventive : BOOLEAN
}

class Prediction {
  id : INT <<PK>>
  predicted_at : DATETIME
  predicted_RUL_hours : FLOAT
  confidence : FLOAT
  gear_fault : VARCHAR
}

class Failure {
  id : INT <<PK>>
  failure_date : DATETIME
  downtime_hours : FLOAT
  gear_fault : VARCHAR
}

class User {
  id : INT <<PK>>
  name : VARCHAR
  password : VARCHAR
  email : VARCHAR
}

class Role {
  role : VARCHAR <<PK>>
}

' ==== Relationships ====
Machine "1" o-- "0..*" Failure : has
Machine "1" o-- "0..*" SensorData : has
MaintenanceAction "0..*" --o "1" Machine : performed on
Prediction "0..*" --o "1" Machine : based on
User "0..*" o-- "0..*" Role : has

@enduml
